# tellus-traveler-python

./: .readthedocs.yml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pypi.yml  python.yml
docs/: api.md  index.ipynb
src/tellus_traveler/: __init__.py  http_client.py  models.py
src/tellus_traveler/api/: __init__.py  _datasets.py  _files.py  _scenes.py  _thumbnails.py  datasets.py  scenes.py
src/tellus_traveler/models/: __init__.py  _file.py  _scene.py  _scene_search.py
tests/: test_http_client.py  test_models.py
tests/api/: test_datasets.py  test_files.py  test_scenes.py  test_thumbnails.py
tests/models/: test_scene.py  test_scene_search.py
