[project]
name = "tellus-traveler"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Takahiro Miyoshi", email = "takahiro-miyoshi@sankichi.net" }
]
dependencies = [
    "requests>=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.0.287",
    "black>=23.7.0",
    "pyright>=1.1.325",
    "types-requests>=2.31.0.2",
    "pytest>=7.4.1",
    "responses>=0.23.3",
]

[tool.rye.scripts]
test = "pytest"
lint = { chain = ["lint:black", "lint:ruff", "lint:pyright"] }
"lint:black" = "black --check ."
"lint:ruff" = "ruff check ."
"lint:pyright" = "pyright"
fix = { chain = ["fix:black", "fix:ruff"] }
"fix:black" = "black ."
"fix:ruff" = "ruff check . --fix"

[tool.hatch.metadata]
allow-direct-references = true
